fix layout issue with long title

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -200,7 +200,7 @@ hr {
   }
 
   .container {
-    max-width: $max-width-desktop;
+    max-width: none;
     padding: 2rem;
     margin: 0;
 
@@ -215,6 +215,7 @@ hr {
 
     &-title {
       padding-bottom: 2rem;
+      white-space: nowrap;
     }
 
     &-links {
@@ -229,6 +230,10 @@ hr {
 
   .post {
     padding-top: 5rem;
+  }
+
+  .post, .list {
+    max-width: $max-width;
   }
 
   .list:first-of-type {
